fixed overflow

--- a/src/ex10_html-css-fundamentals-part2/task-04-1.css
+++ b/src/ex10_html-css-fundamentals-part2/task-04-1.css
@@ -8,7 +8,6 @@ html,
 header,
 body,
 main {
-  width: 100vw;
   display: flex;
   flex-direction: column;
   margin: 0;
